syntax = "proto3";

option go_package = "github.com/ory/keto/relationtuple";

package models;

service RelationTupleService {
  rpc ReadRelationTuples(ReadRelationTuplesRequest) returns (ReadRelationTuplesResponse);
  rpc WriteRelationTuple(WriteRelationTupleRequest) returns (WriteRelationTupleResponse);
}

// Query by partial keys of tuples
message ReadRelationTuplesRequest {
  message Query {
    string namespace = 1;
    // Optional
    string object_id = 2;
    // Optional
    string relation = 3;
    // Optional
    oneof subject {
      string user_id = 4;
      RelationUserSet user_set = 5;
    }
  }

  // All conditions are concatenated with
  // an OR operator. If any query matches
  // the relation will be in the response
  Query query = 1;
  int32 page = 2;
  int32 per_page = 3;
}

message ReadRelationTuplesResponse {
  repeated RelationTuple tuples = 1;
}

message WriteRelationTupleRequest {
  RelationTuple tuple = 1;
}

message WriteRelationTupleResponse {}

// Represents a relation between
// an object and an user.
message RelationTuple {
  string namespace = 1;
  string object_id = 2;
  // Specifies the relation between an `object` and an `user`
  string relation = 3;
  // The user of the tuple can either be
  // a single user or a userset
  oneof subject {
    string user_id = 4;
    RelationUserSet user_set = 5;
  }
}

// Refers to all users which have
// a `relation` with an `object`
message RelationUserSet {
  string namespace = 1;
  string object_id = 2;
  string relation = 3;
}
